--- a/force-app/main/default/classes/SessionWizardController.cls
+++ b/force-app/main/default/classes/SessionWizardController.cls
@@ -10,12 +10,26 @@ public with sharing class SessionWizardController {
     }
   }
 
-  @AuraEnabled(cacheable=true) // To call an Apex method imperatively, you can choose to set cacheable=true
-  public static List<Session_Venue__c> createSessionVenues(Id sessionId) {
+  public class Session {
+    @AuraEnabled
+    public Id sessionId;
+    @AuraEnabled
+    public List<Id> sessionVenuesId;
+  }
 
-    Session__c session = [SELECT Venue__c, Session_Price__c FROM Session__c WHERE Id =:sessionId LIMIT 1];
-    Decimal sessionPrice = session.session_Price__c;
-    List<Venue__c> sectionsList = new List<Venue__c>([SELECT Id, Name FROM Venue__c WHERE Venue__c =:session.Venue__c AND RecordType.DeveloperName ='Venue_Section']); // Query to retrieve the Sections related list from the Venue of the Session 
+  @AuraEnabled
+  public static Session createSessionVenues(Id sessionId) {
+    if(String.isBlank(sessionId)) { return null; }
+    
+    List<Session__c> session = [SELECT Venue__c, Session_Price__c FROM Session__c WHERE Id =:sessionId LIMIT 1];
+    if(session.isEmpty()) { return null; }
+    Session selectedSession = new Session();
+    selectedSession.sessionId = sessionId;
+    
+    Decimal sessionPrice = session.get(0).session_Price__c;
+    List<Venue__c> sectionsList = new List<Venue__c>([SELECT Id, Name FROM Venue__c WHERE Venue__c =:session.get(0).Venue__c AND RecordType.DeveloperName ='Venue_Section']); // Query to retrieve the Sections related list from the Venue of the Session 
+    if(sectionsList.isEmpty()) { return selectedSession; }
+
     List<Session_Venue__c> sessionVenueList = new List<Session_Venue__c>();
 
     for(Venue__c venue : sectionsList) {
@@ -28,10 +42,19 @@ public with sharing class SessionWizardController {
     }
     try {
       insert sessionVenueList;
+      List<Session_Venue__c> createdSessionVenues = [SELECT Id FROM Session_Venue__c WHERE Session__c =:sessionId];
+      if( !createdSessionVenues.isEmpty()) {
+        selectedSession.sessionVenuesId = new List<Id>();
+        for (Session_Venue__c createdSessionVenue : createdSessionVenues) {
+          selectedSession.sessionVenuesId.add(createdSessionVenue.Id);
+        }
+      }
+      System.debug(selectedSession);
+      return selectedSession;
     } catch (Exception e) {
-      System.debug(e.getMessage());
+      throw new AuraHandledException(e.getMessage());
     }
-    return sessionVenueList;
+    
   }
   
   public SessionWizardController() {
