--- a/force-app/main/default/classes/TestDataFactory.cls
+++ b/force-app/main/default/classes/TestDataFactory.cls
@@ -1,5 +1,8 @@
 @isTest
 public class TestDataFactory {
+
+    // For Setup Wizard
+
     public static List<Venue__c> createVenues(Integer numberOfVenues) {
         List<Venue__c> venues = new List<Venue__c>();
         Id recordTypeId = Schema.SObjectType.Venue__c.getRecordTypeInfosByDeveloperName().get('Venue').getRecordTypeId();
@@ -15,6 +18,7 @@ public class TestDataFactory {
         return venues;
     }
 
+
     public static List<Venue__c> createSections(Integer numberOfSections, Id venueId) {
         List<Venue__c> sections = new List<Venue__c>();
         Id recordTypeId = Schema.SObjectType.Venue__c.getRecordTypeInfosByDeveloperName().get('Venue_Section').getRecordTypeId();
@@ -29,5 +33,46 @@ public class TestDataFactory {
 
         insert sections;
         return sections;
+    }
+
+
+    // For Session Wizard
+
+    public static List<Session__c> createSessions(Integer numberOfSessions, String venueId, String eventId) {
+        List<Session__c> sessions = new List<Session__c>();
+        Time newTime = Time.newInstance(3, 3, 3, 0);
+
+        for(Integer i=0; i<numberOfSessions; i++) {
+            Session__c session = new Session__c();
+            session.Session__c = eventId;
+            session.Venue__c = venueId;
+            session.Date__c = Date.today(); 
+            session.Start_Time__c = newTime;
+            session.End_Time__c = newTime.addHours(1);
+            session.Session_Price__c = 1;
+            sessions.add(session);
+        }
+
+        insert sessions;
+        return sessions;
+    }
+
+
+    public static List<Event__c> createEvents(Integer numberOfEvents, Id userId, Date startDate, Date finishDate) {
+        List<Event__c> events = new List<Event__c>();
+
+        for(Integer i=0; i<numberOfEvents; i++) {
+            Event__c event = new Event__c();
+            event.Name = 'Event' + (i+1);
+            event.Event_Manager__c = userId;
+            event.Start_Date__c = startDate;
+            event.Finish_Date__c = finishDate; 
+            event.Sale_Start_Date__c = startDate;
+            event.Sale_Finish_Date__c = startDate;
+            events.add(event);
+        }
+
+        insert events;
+        return events;
     }
 }
