--- a/force-app/main/default/classes/SessionTriggerHandler.cls
+++ b/force-app/main/default/classes/SessionTriggerHandler.cls
@@ -9,6 +9,10 @@ public with sharing class SessionTriggerHandler extends TriggerHandler {
         fillSessionDT(trigger.new);
     }
 
+    public override void afterInsert() {
+        createEventVenue(trigger.new);
+    }
+
     // Método de preenchimento do campo data e hora da sessão (usado posteriormente no flow)
     private static void fillSessionDT(List<Session__c> sessionList) {
 
@@ -21,6 +25,7 @@ public with sharing class SessionTriggerHandler extends TriggerHandler {
         }
     }
     
+    // Método que verifica se a lotação máxima do espaço já foi atingida tendo em consideração o número de bilhetes vendidos
     private static void checkMaxCapacity(List<Session__c> sessionList) {
 
         try {
@@ -38,5 +43,27 @@ public with sharing class SessionTriggerHandler extends TriggerHandler {
         }
     }
 
+
+    // o que acontece se o espaço for alterado?
+    // Método responsável por criar o espaço do evento, utilizando o espaço da sessão
+    private static void createEventVenue(List<Session__c> sessionList) {
+        List<Event_Venue__c> newEventVenues = new List<Event_Venue__c>();
+
+        for(Session__c s : sessionList) {
+            List<Event_Venue__c> eventVenues = [SELECT Id, Event__c, Venue__c FROM Event_Venue__c WHERE Event__c =:s.Session__c AND Venue__c =:s.Venue__c];
+            if(!eventVenues.isEmpty()) { break;}
+            Event_Venue__c eventVenue = new Event_Venue__c();
+            eventVenue.Event__c = s.Session__c;
+            eventVenue.Venue__c = s.Venue__c;
+            newEventVenues.add(eventVenue);
+        }
+
+        try {
+            insert newEventVenues;
+            System.debug(LoggingLevel.INFO, newEventVenues);
+        }catch (Exception e) {
+            System.debug('Erro no insert ' + e.getMessage() + ' na linha ' + e.getLineNumber());
+        }
+    }
 
 }
