--- a/force-app/main/default/classes/SessionWizardControllerTest.cls
+++ b/force-app/main/default/classes/SessionWizardControllerTest.cls
@@ -14,14 +14,24 @@ private class SessionWizardControllerTest {
             LocaleSidKey = 'en_US'
         );
         insert usr;
-        
+        String dailyEventName = 'Daily Event', weeklyEventName = 'Weekly Event', monthlyEventName = 'Monthly Event', annualyEventName = 'Annualy Event';
         String userId = [SELECT Id From User WHERE Alias = 'testcase'].Id;
         Date startDate = Date.today();
-        Date finishDate = Date.today().addMonths(2);
-        List<Event__c> events = TestDataFactory.createEvents(1, userId, startDate, finishDate);
+        Date finishDateDailyEvent=Date.today().addDays(2), finishDateWeeklyEvent=Date.today().addDays(14);
+        Date finishDateMonthlyEvent=Date.today().addMonths(2), finishDateAnnualyEvent = Date.today().addYears(2);
+
+        
+        List<Event__c> dailyEvents = TestDataFactory.createEvents(1, userId, startDate, finishDateDailyEvent, dailyEventName);
+        List<Event__c> weeklyEvents = TestDataFactory.createEvents(1, userId, startDate, finishDateWeeklyEvent, weeklyEventName);
+        List<Event__c> monthlyEvents = TestDataFactory.createEvents(1, userId, startDate, finishDateMonthlyEvent, monthlyEventName);
+        List<Event__c> annualyEvents = TestDataFactory.createEvents(1, userId, startDate, finishDateAnnualyEvent, annualyEventName);
+        
         List<Venue__c> venues = TestDataFactory.createVenues(1);
         List<Venue__c> sections = TestDataFactory.createSections(1, venues.get(0).Id);
-        List<Session__c> sessions = TestDataFactory.createSessions(50, venues.get(0).Id, events.get(0).Id);
+        List<Session__c> dailySessions = TestDataFactory.createSessions(1, venues.get(0).Id, dailyEvents.get(0).Id);
+        List<Session__c> weeklySessions = TestDataFactory.createSessions(1, venues.get(0).Id, weeklyEvents.get(0).Id);
+        List<Session__c> monthlySessions = TestDataFactory.createSessions(1, venues.get(0).Id, monthlyEvents.get(0).Id);
+        List<Session__c> annualySessions = TestDataFactory.createSessions(1, venues.get(0).Id, annualyEvents.get(0).Id);
         //List<Venue__c> sessionVenues = SessionWizardController.createSessionVenues(, );
         
         /* System.runAs(user){
@@ -57,7 +67,7 @@ private class SessionWizardControllerTest {
     static void testDailyCloneSessionsAndSessionVenues() {
         List<Id> sessions = new List<Id>();
         
-        Id session = [SELECT Id FROM Session__c LIMIT 1].Id;
+        Id session = [SELECT Id FROM Session__c WHERE Session__r.Name='Daily Event 1' LIMIT 1].Id;
         sessions.add(session);
         Boolean result = SessionWizardController.cloneSessionsAndSessionVenues(sessions, 'Daily');
         System.assertEquals(true, result);
@@ -67,7 +77,7 @@ private class SessionWizardControllerTest {
     static void testWeeklyCloneSessionsAndSessionVenues() {
         List<Id> sessions = new List<Id>();
         
-        Id session = [SELECT Id FROM Session__c LIMIT 1].Id;
+        Id session = [SELECT Id FROM Session__c WHERE Session__r.Name='Weekly Event 1' LIMIT 1].Id;
         sessions.add(session);
         Boolean result = SessionWizardController.cloneSessionsAndSessionVenues(sessions, 'Weekly');
         System.assertEquals(true, result);
@@ -77,7 +87,7 @@ private class SessionWizardControllerTest {
     static void testMonthlyCloneSessionsAndSessionVenues() {
         List<Id> sessions = new List<Id>();
         
-        Id session = [SELECT Id FROM Session__c LIMIT 1].Id;
+        Id session = [SELECT Id FROM Session__c WHERE Session__r.Name='Monthly Event 1' LIMIT 1].Id;
         sessions.add(session);
         Boolean result = SessionWizardController.cloneSessionsAndSessionVenues(sessions, 'Monthly');
         System.assertEquals(true, result);
@@ -87,10 +97,20 @@ private class SessionWizardControllerTest {
     static void testAnnualyCloneSessionsAndSessionVenues() {
         List<Id> sessions = new List<Id>();
         
-        Id session = [SELECT Id FROM Session__c LIMIT 1].Id;
+        Id session = [SELECT Id FROM Session__c WHERE Session__r.Name='Annualy Event 1' LIMIT 1].Id;
         sessions.add(session);
         Boolean result = SessionWizardController.cloneSessionsAndSessionVenues(sessions, 'Annualy');
-        System.assertEquals(false, result);
+        System.assertEquals(true, result);
+    }
+
+    // Test for SessionTrigger
+    @isTest
+    static void testUpdateSessionVenue() {
+        
+        List<Session__c> sessions = [SELECT Id, Session__c FROM Session__c WHERE Session__r.Name='Daily Event 1' LIMIT 1];
+        sessions.get(0).Session__c = [SELECT Id FROM Event__c  WHERE Name='Monthly Event 1' LIMIT 1].Id;
+        update sessions;
+        System.assert(sessions.size() > 0);
     }
 
     // Bulk Testing 
@@ -147,7 +167,7 @@ private class SessionWizardControllerTest {
             SessionWizardController.createSessionVenues(sessionId);
         }catch(AuraHandledException e) {
             System.debug(e.getMessage());
-            //System.assertEquals(e.getMessage(), e.getMessage());  
+            System.assertEquals(e.getMessage(), e.getMessage());  
         }
         Test.stopTest();
             
