--- a/force-app/main/default/classes/TicketTriggerHandler.cls
+++ b/force-app/main/default/classes/TicketTriggerHandler.cls
@@ -8,20 +8,22 @@ public with sharing class TicketTriggerHandler extends TriggerHandler {
     
     // 
     private static void sendPaymentConfirmationEmail(List<Ticket__c> ticketList) {
-        Messaging.reserveMassEmailCapacity(ticketList.size());
-        Messaging.MassEmailMessage mail = new Messaging.MassEmailMessage();
         List<Id> contactIdsList = new List<Id>();
         
         for(Ticket__c t : ticketList) {
-            contactIdsList.add(t.Contact__c);
+            if(t.Status__c == 'Paid') {
+                contactIdsList.add(t.Contact__c);
+            }
         }
         
         System.debug(LoggingLevel.INFO, contactIdsList);
-        EmailTemplate template = [SELECT Id, Name FROM EmailTemplate WHERE DeveloperName = 'Ticket_1652720392473' LIMIT 1];
-
-        mail.setTargetObjectIds(contactIdsList);
-        mail.setTemplateId(template.Id);
-        Messaging.SendEmail(New Messaging.MassEmailMessage[]{mail});
-
+        if(contactIdsList.size() > 0) {
+            Messaging.reserveMassEmailCapacity(contactIdsList.size());
+            Messaging.MassEmailMessage mail = new Messaging.MassEmailMessage();
+            EmailTemplate template = [SELECT Id, Name FROM EmailTemplate WHERE DeveloperName = 'Ticket_1652720392473' LIMIT 1];
+            mail.setTargetObjectIds(contactIdsList);
+            mail.setTemplateId(template.Id);
+            Messaging.SendEmail(New Messaging.MassEmailMessage[]{mail});
+        }
     }
 }
