--- a/force-app/main/default/classes/SessionWizardController.cls
+++ b/force-app/main/default/classes/SessionWizardController.cls
@@ -35,9 +35,16 @@ public with sharing class SessionWizardController {
     
     Decimal sessionPrice = session.get(0).session_Price__c;
     List<Venue__c> sectionsList = new List<Venue__c>([SELECT Id, Name FROM Venue__c WHERE Venue__c =:session.get(0).Venue__c AND RecordType.DeveloperName ='Venue_Section']); // Query to retrieve the Sections related list from the Venue of the Session 
-    if(sectionsList.isEmpty()) { return selectedSession; }
-
     List<Session_Venue__c> sessionVenueList = new List<Session_Venue__c>();
+
+    if(sectionsList.isEmpty()) {
+      Session_Venue__c sessionVenue = new Session_Venue__c();
+      sessionVenue.Price__c = sessionPrice;
+      sessionVenue.Session__c = sessionId;
+      sessionVenue.Venue__c = session.get(0).Venue__c;
+      System.debug(LoggingLevel.INFO, sessionVenue);
+      sessionVenueList.add(sessionVenue); 
+    }
 
     for(Venue__c venue : sectionsList) {
       Session_Venue__c sessionVenue = new Session_Venue__c();
@@ -47,6 +54,7 @@ public with sharing class SessionWizardController {
       System.debug(LoggingLevel.INFO, sessionVenue);
       sessionVenueList.add(sessionVenue);
     }
+
     try {
       insert sessionVenueList;
       List<Session_Venue__c> createdSessionVenues = [SELECT Id FROM Session_Venue__c WHERE Session__c =:sessionId];
@@ -59,8 +67,16 @@ public with sharing class SessionWizardController {
       System.debug(selectedSession);
       return selectedSession;
     } catch (Exception e) {
-      throw new AuraHandledException(e.getMessage());
+      System.debug(e.getMessage());
+      return selectedSession;
     } 
+  }
+
+  public class SessionMap {
+    @AuraEnabled
+    public Id originalId;
+    @AuraEnabled
+    public Id clonedId;
   }
 
   @AuraEnabled
@@ -69,20 +85,39 @@ public with sharing class SessionWizardController {
     if(sessions.isEmpty()) { return false; }
     
     List<Session_Venue__c> sessionVenueList = new List<Session_Venue__c>();
+    Map<Id, List<Session_Venue__c>> sessionIdAndSessionVenues = new Map<Id, List<Session_Venue__c>>();
+    Set<Id> sessionsIds = new Set<Id>();
 
+    // Loop to keep the original sessions ids
     for(Session__c s : sessions) {
-      List<Venue__c> sectionsList = new List<Venue__c>([SELECT Id FROM Venue__c WHERE Venue__c =:s.Venue__c AND RecordType.DeveloperName ='Venue_Section']); // Query to retrieve the Sections related list from the Venue of the Session 
-      if(sectionsList.isEmpty()) { return true; }
-
-      for(Venue__c venue : sectionsList) {
-        Session_Venue__c sessionVenue = new Session_Venue__c();
-        sessionVenue.Price__c = s.session_Price__c;
-        sessionVenue.Session__c = s.Id;
-        sessionVenue.Venue__c = venue.Id;
-        System.debug(LoggingLevel.INFO, sessionVenue);
-        sessionVenueList.add(sessionVenue);
+      if(s.getCloneSourceId() != null) {
+        sessionsIds.add(s.getCloneSourceId());
       }
     }
+
+    // Loop used to retrieve the Session Venues from the original session, which will then be added to the sessionIdAndSessionVenues map;
+    // A Query é feita na declaração do ciclo pois apenas vai ser utilizada neste bloco e daí não necessita de ocupar espaço na heap durante a execução do restante código 
+    for(Session_Venue__c sv : [SELECT Id, Price__c, Seat_Type__c, Session__c, Venue__c FROM Session_Venue__c WHERE Session__c IN :sessionsIds]) {
+      List<Session_Venue__c> tmpSessionVenue = sessionIdAndSessionVenues.get(sv.Session__c); // Get Session Id
+      if(tmpSessionVenue == null) {
+        tmpSessionVenue = new List<Session_Venue__c>();
+      }
+      tmpSessionVenue.add(sv);
+      sessionIdAndSessionVenues.put(sv.Session__c, tmpSessionVenue);
+    }
+    // Loop to create the session venues for every session to be cloned
+    for(Session__c s : sessions) {
+      List<Session_Venue__c> sessionSessionVenues = sessionIdAndSessionVenues.get(s.getCloneSourceId());
+      if(sessionSessionVenues == null ) { continue; }
+
+      for(Session_Venue__c sv : sessionSessionVenues) {
+        Session_Venue__c clonedSessionVenue = sv.clone(false, false, false, false);
+        clonedSessionVenue.Session__c = s.Id;
+        System.debug(LoggingLevel.INFO, clonedSessionVenue);
+        sessionVenueList.add(clonedSessionVenue);
+      }
+    }
+
     try {
       insert sessionVenueList;
       return true;
